# CAMotics

./: .gitignore  CMakeLists.txt
cmake/: QtCamoticsConfig.cmake  camoticsConfig.cmake.in
src/: CMakeLists.txt  build_info.cpp.in  resources.cpp.in
src/cairo/: CMakeLists.txt
src/camotics/: CMakeLists.txt
src/camotics/contour/: CMakeLists.txt
src/camotics/machine/: CMakeLists.txt
src/camotics/opt/: CMakeLists.txt
src/camotics/probe/: CMakeLists.txt
src/camotics/project/: CMakeLists.txt
src/camotics/qt/: CMakeLists.txt
src/camotics/render/: CMakeLists.txt
src/camotics/sim/: CMakeLists.txt  ToolPathTask.cpp  ToolPathTask.h
src/camotics/value/: CMakeLists.txt
src/camotics/view/: CMakeLists.txt
src/dxf/: CMakeLists.txt
src/dxflib/: CMakeLists.txt
src/gcode/: CMakeLists.txt
src/gcode/ast/: CMakeLists.txt
src/gcode/interp/: CMakeLists.txt
src/gcode/machine/: CMakeLists.txt  Transform.cpp  Transform.h
src/gcode/parse/: CMakeLists.txt
src/gcode/plan/: CMakeLists.txt
src/stl/: CMakeLists.txt
