set(headers
    cairo-analysis-surface-private.h
    cairo-arc-private.h
    cairo-atomic-private.h
    cairo-cache-private.h
    cairo-clip-private.h
    cairo-compiler-private.h
    cairo-deprecated.h
    cairo-features.h
    cairo-fixed-private.h
    cairo-fixed-type-private.h
    cairo-freelist-private.h
    cairo-gstate-private.h
    cairo.h
    cairo-hash-private.h
    cairoint.h
    cairo-malloc-private.h
    cairo-meta-surface-private.h
    cairo-mutex-impl-private.h
    cairo-mutex-list-private.h
    cairo-mutex-private.h
    cairo-mutex-type-private.h
    cairo-paginated-private.h
    cairo-path-fixed-private.h
    cairo-path-private.h
    cairo-private.h
    cairo-reference-count-private.h
    cairo-region-private.h
    cairo-scaled-font-private.h
    cairo-skiplist-private.h
    cairo-surface-fallback-private.h
    cairo-surface-private.h
    cairo-types-private.h
    cairo-user-font-private.h
    cairo-version.h
    cairo-wideint-private.h
    cairo-wideint-type-private.h
    pixman-accessor.h
    pixman-combine32.h
    pixman-combine64.h
    pixman-compiler.h
    pixman-edge-imp.h
    pixman.h
    pixman-private.h
    pixman-version.h
)
set(sources
    cairo-analysis-surface.c
    cairo-arc.c
    cairo-array.c
    cairo-atomic.c
    cairo-bentley-ottmann.c
    cairo.c
    cairo-cache.c
    cairo-clip.c
    cairo-color.c
    cairo-font-face.c
    cairo-font-face-twin.c
    cairo-font-face-twin-data.c
    cairo-font-options.c
    cairo-freelist.c
    cairo-gstate.c
    cairo-hash.c
    cairo-hull.c
    cairo-image-surface.c
    cairo-matrix.c
    cairo-meta-surface.c
    cairo-misc.c
    cairo-path-bounds.c
    cairo-path.c
    cairo-path-fill.c
    cairo-path-fixed.c
    cairo-path-stroke.c
    cairo-pattern.c
    cairo-pen.c
    cairo-polygon.c
    cairo-rectangle.c
    cairo-region.c
    cairo-scaled-font.c
    cairo-skiplist.c
    cairo-slope.c
    cairo-spline.c
    cairo-stroke-style.c
    cairo-surface.c
    cairo-surface-fallback.c
    cairo-traps.c
    cairo-unicode.c
    cairo-user-font.c
    cairo-version.c
    cairo-wideint.c
    pixman-access-accessors.c
    pixman-access.c
    pixman-bits-image.c
    pixman.c
    pixman-combine32.c
    pixman-combine64.c
    pixman-cpu.c
    pixman-edge-accessors.c
    pixman-edge.c
    pixman-fast-path.c
    pixman-general.c
    pixman-gradient-walker.c
    pixman-image.c
    pixman-implementation.c
    pixman-linear-gradient.c
    pixman-matrix.c
    pixman-radial-gradient.c
    pixman-region16.c
    pixman-region32.c
    pixman-solid-fill.c
    pixman-trap.c
    pixman-utils.c
)
add_library(camotics-cairo OBJECT "${headers}" "${sources}")
target_include_directories(camotics-cairo PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_compile_definitions(camotics-cairo PRIVATE 
    USING_CBANG
    CAIRO_NO_MUTEX
    HAVE_INTTYPES_H
    CAIRO_HAS_IMAGE_SURFACE
)
set_property(TARGET camotics-cairo PROPERTY POSITION_INDEPENDENT_CODE 1 )
