set(headers
    Assign.h
    BinaryOp.h
    Block.h
    Comment.h
    Entity.h
    FunctionCall.h
    NamedReference.h
    Number.h
    OCode.h
    Operator.h
    Program.h
    QuotedExpr.h
    Reference.h
    UnaryOp.h
    Word.h
)
set(sources
    Assign.cpp
    BinaryOp.cpp
    Block.cpp
    Comment.cpp
    FunctionCall.cpp
    NamedReference.cpp
    Number.cpp
    OCode.cpp
    Operator.cpp
    Program.cpp
    QuotedExpr.cpp
    Reference.cpp
    UnaryOp.cpp
    Word.cpp
)
add_library(gcode-ast OBJECT "${headers}" "${sources}")
